[package]
name = "design_to_blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_egui = "0.21.0"
bevy_panorbit_camera = "0.6.1"
bevy_tweening = "0.8.0"
grid = "0.10.0"
rand = "0.8.5"
